--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     box-shadow: 0 0.375rem 0.75rem rgb(140 152 164 / 60%);
+    top: 0;
 }
 
 #accordionSidebar~#sidebarToggle::after {
