--- a/VaccineC/src/app/pages/movimentar-estoque/add-movement-product-exit-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/add-movement-product-exit-dialog.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Produto</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="max-height: initial;">
     <form [formGroup]="movementProductForm">
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
