--- a/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-entry-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-entry-dialog.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Produto</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="max-height: initial;">
     <form [formGroup]="movementProductForm">
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
@@ -63,7 +63,7 @@
         <mat-divider class="mt-2 mb-2"></mat-divider>
 
         <div class="div-row-input mt-3">
-            <mat-form-field appearance="fill" class="col-sm-12">
+            <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Lote</mat-label>
                 <input matInput formControlName="Batch" [(ngModel)]="Batch" placeholder="Ex. A1B2C3" (blur)="getBatch()"
                     required>
@@ -72,10 +72,8 @@
                     <span *ngIf="movementProductForm.controls.Batch.errors?.required">O Lote é obrigatório.</span>
                 </mat-error>
             </mat-form-field>
-        </div>
 
-        <div class="div-row-input">
-            <mat-form-field appearance="fill" class="col-sm-12">
+            <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Fabricante</mat-label>
                 <input matInput formControlName="Manufacturer" [(ngModel)]="Manufacturer" placeholder="Ex. Fluarix"
                     required [readonly]="isFieldReadonly">
