--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -368,7 +368,7 @@
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsPhone"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumnsPhone;"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsPhone;" (dblclick)="openUpdatePersonPhoneDialog(row.ID)" style="cursor:pointer;" class="hover-element-row"></tr>
 
                 <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
@@ -401,8 +401,13 @@
                 <!-- Address Column -->
                 <ng-container matColumnDef="Address">
                   <th mat-header-cell *matHeaderCellDef> Endereço </th>
-                  <td mat-cell *matCellDef="let row"> {{row.PublicPlace}}, {{row.AddressNumber}} - {{row.District}} -
-                    {{row.City}}/{{row.State}} - {{row.Country}}</td>
+                  <td mat-cell *matCellDef="let row"> 
+                    <div>
+                      <div>{{row.PublicPlace}}, nº {{row.AddressNumber}} {{row.Complement == '' ? '' : '- ' + row.Complement}}</div>
+                      <div class="small-text">Bairro {{row.District}} - {{row.City}}/{{row.State}} - {{row.AddressCode}}</div>
+                  </div>
+                  
+                  </td>
                 </ng-container>
 
                 <!-- Id Hidden Column -->
@@ -427,7 +432,7 @@
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsAddress"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumnsAddress;"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsAddress;" class="hover-element-row" style="cursor:pointer;" (dblclick)="openUpdatePersonAddressDialog(row.ID)"></tr>
 
                 <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
