--- a/VaccineC/src/app/pages/pessoas/update-person-address-dialog.html
+++ b/VaccineC/src/app/pages/pessoas/update-person-address-dialog.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Endereço</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="max-height: initial;">
     <form [formGroup]="personAddressForm">
         <div class="div-row-input">
             <mat-form-field appearance="fill" class="col-sm-12">
