--- a/VaccineC/src/app/pages/minha-conta/password-dialog.html
+++ b/VaccineC/src/app/pages/minha-conta/password-dialog.html
@@ -27,6 +27,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button cdkFocusInitial (click)="resetPassword()" class="create-button">Alterar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button cdkFocusInitial (click)="resetPassword()" class="create-button">Alterar</button>
 </mat-dialog-actions>
