--- a/VaccineC/src/app/pages/aplicacao/aplicacao-cadastro/aplication-dialog.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao-cadastro/aplication-dialog.html
@@ -61,6 +61,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
+    <button mat-button mat-dialog-close color="primary">Cancelar</button>
     <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
