--- a/VaccineC/src/app/pages/empresa/confirm-company-schedule-remove-dialog.html
+++ b/VaccineC/src/app/pages/empresa/confirm-company-schedule-remove-dialog.html
@@ -4,7 +4,7 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button
-            mat-dialog-close>Cancelar</button>
+            mat-dialog-close color="primary">Cancelar</button>
     <button mat-flat-button
             color="warn"
             [mat-dialog-close]="true"
