--- a/VaccineC/src/app/pages/empresa/update-company-schedule-dialog.html
+++ b/VaccineC/src/app/pages/empresa/update-company-schedule-dialog.html
@@ -43,6 +43,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button class="create-button" mat-button (click)="updateCompanySchedule()" cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button class="create-button" mat-flat-button (click)="updateCompanySchedule()" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
