--- a/VaccineC/src/app/pages/gerenciar-usuarios/confirm-user-resource-remove-dialog.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/confirm-user-resource-remove-dialog.html
@@ -3,6 +3,6 @@
     <p>Tem certeza que deseja remover esse Recurso?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close>Cancelar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
     <button mat-flat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Remover</button>
 </mat-dialog-actions>
