--- a/VaccineC/src/app/pages/gerenciar-usuarios/user-resource-add-dialog.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/user-resource-add-dialog.html
@@ -28,6 +28,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button cdkFocusInitial (click)="saveUserResource()" class="create-button">Salvar</button>
+  <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+  <button mat-flat-button cdkFocusInitial (click)="saveUserResource()" class="create-button">Salvar</button>
 </mat-dialog-actions>
