--- a/VaccineC/src/app/pages/movimentar-estoque/add-movement-product-entry-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/add-movement-product-entry-dialog.html
@@ -116,6 +116,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button (click)="saveMovementProductEntry()" cdkFocusInitial class="create-button">Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button (click)="saveMovementProductEntry()" cdkFocusInitial class="create-button">Salvar</button>
 </mat-dialog-actions>
