--- a/VaccineC/src/app/pages/movimentar-estoque/confirm-cancel-movement-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/confirm-cancel-movement-dialog.html
@@ -4,9 +4,9 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button
-            mat-dialog-close>Voltar</button>
+            mat-dialog-close color="primary">Voltar</button>
     <button mat-flat-button
             color="warn"
             [mat-dialog-close]="true"
-            cdkFocusInitial>Cancelar</button>
+            cdkFocusInitial >Cancelar</button>
 </mat-dialog-actions>
