--- a/VaccineC/src/app/pages/orcamentos/orcamento-cadastro/budget-product-dialog.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamento-cadastro/budget-product-dialog.html
@@ -62,7 +62,7 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
+    <button mat-button mat-dialog-close color="primary">Cancelar</button>
     <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
 
