--- a/VaccineC/src/app/pages/pessoas/update-person-address-dialog.html
+++ b/VaccineC/src/app/pages/pessoas/update-person-address-dialog.html
@@ -96,6 +96,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button class="create-button" (click)="updatePersonAddress()" cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button class="create-button" (click)="updatePersonAddress()" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
