--- a/VaccineC/src/app/pages/pessoas/update-person-phone-dialog.html
+++ b/VaccineC/src/app/pages/pessoas/update-person-phone-dialog.html
@@ -44,6 +44,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button class="create-button" cdkFocusInitial (click)="updatePersonPhone()">Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button class="create-button" cdkFocusInitial (click)="updatePersonPhone()">Salvar</button>
 </mat-dialog-actions>
