--- a/VaccineC/src/app/pages/produto/dialog-content-dose.html
+++ b/VaccineC/src/app/pages/produto/dialog-content-dose.html
@@ -41,6 +41,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button class="create-button" (click)="saveProductDoses()"cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button class="create-button" (click)="saveProductDoses()"cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
