--- a/VaccineC/src/app/pages/produto/update-dialog-content-dose.html
+++ b/VaccineC/src/app/pages/produto/update-dialog-content-dose.html
@@ -42,6 +42,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button  class="create-button" (click)="updateProductDoses()"cdkFocusInitial>Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
+    <button mat-flat-button class="create-button" (click)="updateProductDoses()"cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
