--- a/VaccineC/src/app/pages/situacao-estoque/batch-information-dialog.html
+++ b/VaccineC/src/app/pages/situacao-estoque/batch-information-dialog.html
@@ -45,5 +45,5 @@
         </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Fechar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Fechar</button>
 </mat-dialog-actions>
