--- a/VaccineC/src/app/shared/components/global-error-dialog/global-error-dialog.component.html
+++ b/VaccineC/src/app/shared/components/global-error-dialog/global-error-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Erro</h1>
 <div mat-dialog-content>{{ data.errorMessage }}</div>
-<div mat-dialog-actions>
+<div mat-dialog-actions color="primary">
     <button mat-button mat-dialog-close>Fechar</button>
 </div>
