--- a/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
+++ b/VaccineC/src/app/shared/components/side-menu/side-menu.component.html
@@ -99,7 +99,7 @@
             LOGOUT
         </div>
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/login">
+            <a class="nav-link collapsed" (click)="logout()">
                 <i class="fas fa-fw fa-power-off resource-icon"></i>
                 <span>SAIR</span>
             </a>
