Ajustes exibição notificações

--- a/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
+++ b/VaccineC/src/app/shared/components/toolbar/toolbar.component.html
@@ -41,7 +41,7 @@
 
         <!-- Nav Item - Alerts -->
         <li class="nav-item dropdown no-arrow mx-1" dropdown [hidden]="isShowNotificationUser">
-            <a class="nav-link dropdown-toggle" href id="basic-link" dropdownToggle (click)="false" (click)="hideBadge()">
+            <a class="nav-link dropdown-toggle" href id="basic-link" dropdownToggle (click)="false" >
                 <i class="fas fa-bell fa-fw"></i>
                 <span [hidden]="isNewNotification" class="badge badge-danger badge-counter">+{{newNotifications}}</span>
             </a>
