--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -1,6 +1,7 @@
 <div class="d-flex">
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
+        <app-toolbar></app-toolbar>
         <section id="center" class="section-main is-content mt-5">
             <div class="row my-account-card">
                 <div class="col-lg-4">
