--- a/VaccineC/src/app/styles/css/style-global.css
+++ b/VaccineC/src/app/styles/css/style-global.css
@@ -11104,9 +11104,10 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(to top, #68a2d8, #488ed0, #317ABE);
+  background-image: linear-gradient(to bottom, #4b81e5, #3c8fe6, #3a9be5, #46a6e1, #59b0dd);
   background-size: cover;
 }
+
 
 .bg-gradient-secondary {
   background-color: #858796;
